fixed css bug with z-index on build area help and home screen head positioning

--- a/src/styles/components/_expandedPrinter.scss
+++ b/src/styles/components/_expandedPrinter.scss
@@ -102,6 +102,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        z-index: 3;
         #closeExplain {
             height: 18px;
             width: 18px;
