--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -103,13 +103,13 @@
 @media screen and (max-width: 400px) {
     .homeWrapper {
         .mainHead {
-            top: 10px;
-            left: 5px;
-            font-size: 24px;
+            top: 15px;
+            left: 25px;
+            font-size: 22px;
             h1 {
                 #header2 {
                     top: 38px;
-                    right: 135px;
+                    right: 170px;
                 }
             }
         }
